--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,8 @@ jobs:
         echo tr''avis_fol''d:end:build
       - >
         echo '-----BEGIN SHA256SUM-----' &&
-        (cd dist && sha256sum *.tar.gz) &&
+        (cd dist && sha256sum *.tar.gz | sort) &&
+        ls -r dist && sha256sum dist/*/* &&
         echo
       # XXX if: branch in (master, dev, stable) OR tag IS present
 
